# pypdfbox

./: .gitignore  CHANGES.md  CONTRIBUTING.md  LICENSE  NOTICE  PROVENANCE.md  README.md  RELEASE_NOTES_v0.9.0rc1.md  RELEASE_NOTES_v1.0.0rc1.md  RELEASE_NOTES_v1.0.0rc2.md  RELEASE_NOTES_v1.0.0rc3.md  RELEASE_NOTES_v1.0.0rc4.md  RELEASE_NOTES_v1.0.0rc5.md  png  pyproject.toml
.github/workflows/: ci.yml  license-check.yml  release.yml  verify-platforms.yml  verify-windows.yml
archive/: README.md
docs/: build.md  changelog.md  export-control.md  index.md  install.md  migration.md  support.md
docs/api/: contentstream.md  cos.md  fontbox.md  index.md  io.md  multipdf.md  pdfparser.md  pdfwriter.md  pdmodel-font.md  pdmodel-graphics.md  pdmodel-interactive.md  pdmodel.md  rendering.md  text.md  tools.md  xmpbox.md
docs/guides/: cli.md  embedded-files.md  encryption.md  forms.md  merging-splitting.md  rendering.md  signing.md  tagged-pdf.md  text-extraction.md
oracle/: download_jars.sh
oracle/probes/: AaTriggerJsonProbe.java  AbstractContentStreamFormatProbe.java  AcroFormAccessorProbe.java  AcroFormFieldFuzzProbe.java  AcroFormFlattenFuzzProbe.java  AcroFormOrphanFixupProbe.java  ActionDestTypeProbe.java  ActionNextChainProbe.java  ActionProbe.java  ActionSubtypeFuzzProbe.java  ActionSubtypesFuzzProbe.java  AddMoreFormattingProbe.java  AdditionalActionsFuzzProbe.java  Aes256R6Probe.java  AnnotFlagsProbe.java  AnnotationTypeAccessorFuzzProbe.java  AppearanceCharacteristicsFuzzProbe.java  AppearanceDictResolveFuzzProbe.java  AppearanceDictionaryFuzzProbe.java  AppearanceEntryFuzzProbe.java  AppearanceStateProbe.java  Ascii85HexDecodeFuzzProbe.java  AttributeObjectFuzzProbe.java  AxialRadialShadingFuzzProbe.java  BeadSeparationProbe.java  BlendModeFuzzProbe.java  BorderAppearanceFuzzProbe.java  BuiltinEncodingProbe.java  ButtonOnValueFilterProbe.java  ButtonStateFuzzProbe.java  ByteRangeProbe.java  CMapParseFuzzProbe.java  CMapStreamWalkFuzzProbe.java  CalColorProbe.java  CalColorSpaceFuzzProbe.java  CalComponentsProbe.java  CatalogVersionProbe.java  CcittEncRefProbe.java  CffCharsetEdgeLookupProbe.java  CffCharsetEncodingProbe.java  (+368 more)
pypdfbox/: __init__.py  loader.py
pypdfbox/benchmark/: README.md  __init__.py  load_and_save.py  null_output_stream.py  rendering.py  text_extraction.py
pypdfbox/contentstream/: __init__.py  operator.py  operator_name.py  operator_processor.py  pd_content_stream.py  pdf_graphics_stream_engine.py  pdf_stream_engine.py
pypdfbox/cos/: __init__.py  cos_array.py  cos_base.py  cos_boolean.py  cos_dictionary.py  cos_document.py  cos_document_state.py  cos_float.py  cos_increment.py  cos_input_stream.py  cos_integer.py  cos_name.py  cos_null.py  cos_number.py  cos_object.py  cos_object_key.py  cos_output_stream.py  cos_stream.py  cos_string.py  cos_update_info.py  cos_update_state.py  i_cos_parser.py  i_cos_visitor.py  pd_linearization_dictionary.py  unmodifiable_cos_dictionary.py
pypdfbox/debugger/: README.md  __init__.py  pd_debugger.py
pypdfbox/examples/: README.md  __init__.py
pypdfbox/filter/: __init__.py  _decode_params.py  _predictor.py  ascii85_decode.py  ascii85_filter.py  ascii85_input_stream.py  ascii85_output_stream.py  ascii_hex_decode.py  ascii_hex_filter.py  ccitt_fax_decode.py  ccitt_fax_decoder_stream.py  ccitt_fax_encoder_stream.py  ccitt_fax_filter.py  crypt_filter.py  dct_decode.py  dct_filter.py  decode_options.py  decode_result.py  filter.py  filter_factory.py  final_decode_options.py  flate_decode.py  flate_filter.py  flate_filter_decoder_stream.py  identity_filter.py  jbig2_decode.py  jbig2_filter.py  jpx_decode.py  jpx_filter.py  lzw_decode.py  lzw_filter.py  missing_image_reader_exception.py  node.py  predictor.py  predictor_output_stream.py  run_length_decode.py  run_length_filter.py  tiff_extension.py  tree.py
pypdfbox/fontbox/: __init__.py  cid_font_mapping.py  cjk_loader.py  encoded_font.py  font_box_font.py  font_format.py  font_info.py  font_mapper.py  font_mappers.py  font_mapping.py  font_provider.py  font_type.py  liberation_loader.py
pypdfbox/io/: __init__.py  io_utils.py  memory_usage_setting.py  non_seekable_random_access_read_input_stream.py  random_access.py  random_access_input_stream.py  random_access_output_stream.py  random_access_read.py  random_access_read_buffer.py  random_access_read_buffered_file.py  random_access_read_memory_mapped.py  random_access_read_memory_mapped_file.py  random_access_read_view.py  random_access_read_write_buffer.py  random_access_stream_cache.py  random_access_stream_cache_impl.py  random_access_write.py  random_access_write_buffer.py  scratch_file.py  scratch_file_buffer.py  sequence_random_access_read.py  stream_cache_create_function.py
pypdfbox/jbig2/: __init__.py  bitmap.py  dictionary.py  jbig2_document.py  jbig2_globals.py  jbig2_image_reader.py  jbig2_image_reader_spi.py  jbig2_page.py  jbig2_read_param.py  region.py  segment_data.py  segment_header.py
pypdfbox/multipdf/: __init__.py  k_cloner.py  layer_utility.py  overlay.py  page_extractor.py  pdf_clone_utility.py  pdf_merger_utility.py  splitter.py
pypdfbox/pdfparser/: __init__.py  base_parser.py  brute_force_parser.py  cos_parser.py  endstream_filter_stream.py  fdf_parser.py  linearization_hint_table.py  object_numbers.py  parse_error.py  pdf_object_stream_parser.py  pdf_parser.py  pdf_stream_parser.py  (+5 more)
scripts/: check_native_licenses.py  debugger_screenshot.py  parity.py  qpdf_check.py  verapdf_check.py
tests/: conftest.py  test_coverage_tail_wave1354.py  test_loader.py  test_loader_branch_wave1402.py  test_loader_branch_wave1403.py  test_loader_parity.py  test_loader_pdfparser_wave739.py  test_loader_pdfparser_wave900.py  test_loader_wave284.py  test_loader_wave292.py  test_native_license_scan.py  test_package_exports_wave290.py  test_residual_misc_wave1395.py  test_tail_sweep_wave849.py  test_tail_sweep_wave850.py  test_wave1359_audit_closures.py  test_wave1359_residue_close_to_100.py  test_wave1401_residual_branches.py  test_wave1401_residual_branches_p2.py  test_wave1401_residual_branches_p3.py
(+6609 files in other folders)
