[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "pypdfbox"
version = "0.9.0rc1"
description = "Python-native port of Apache PDFBox-compatible APIs (Apache 2.0)"
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Mehdy Haghy", email = "mehdy@haghy.com" },
    { name = "pypdfbox contributors" },
]
keywords = [
    "pdf",
    "pdfbox",
    "accessibility",
    "tagged-pdf",
    "pdf-a",
    "pdf-ua",
    "pdf-parser",
    "pdf-writer",
    "pdf-rendering",
    "xmp",
    "fontbox",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]

# PRD §4 + §3.7.1: runtime deps require explicit user approval per the
# library catalog. Currently approved:
#   - cryptography (Apache 2.0 / BSD): replaces upstream's javax.crypto
#     stdlib usage + Bouncy Castle for encryption/signing. Required by
#     pypdfbox.pdmodel.encryption (StandardSecurityHandler r2-r6:
#     RC4 40/128-bit, AES-128/256 CBC) and signature verification
#     (PDSignature /Contents PKCS#7).
# Font handling is ported from org.apache.fontbox.* directly — no
# fonttools dep. asn1crypto / pyHanko intentionally NOT adopted; see
# CHANGES.md for rationale.
dependencies = [
    "cryptography>=42",   # Apache-2.0 / BSD
    "Pillow>=12.2.0",     # HPND (BSD-style, MIT-compatible) — image canvas + codecs for pypdfbox.rendering
    "fontTools>=4",       # MIT — TTF/CFF/OTF/Type1 parsing for pypdfbox.fontbox
    "aggdraw>=1.3",       # BSD-3 — anti-aliased path/shape drawing on top of Pillow
    "jbig2-parser",       # MIT — JBIG2 image decoder (Rust-backed, used by /JBIG2Decode filter)
]

[project.urls]
Homepage = "https://github.com/mehdyhaghy/pypdfbox"
Repository = "https://github.com/mehdyhaghy/pypdfbox"
Documentation = "https://github.com/mehdyhaghy/pypdfbox#readme"
"Bug Tracker" = "https://github.com/mehdyhaghy/pypdfbox/issues"
Changelog = "https://github.com/mehdyhaghy/pypdfbox/blob/main/CHANGES.md"

# Mirror upstream's ``pdfbox`` script: dispatcher in pypdfbox.tools.cli
# decides which subcommand (info / merge / split / version / decrypt) runs.
[project.scripts]
pypdfbox = "pypdfbox.tools.cli:main"

# PEP 735 dependency groups — uv-native, replaces optional-dependencies for dev tooling.
[dependency-groups]
dev = [
    "pytest>=8",          # MIT
    "pytest-cov>=5",      # MIT
    "ruff>=0.5",          # MIT
    "mypy>=1.10",         # MIT
]

[tool.hatch.build.targets.wheel]
packages = ["pypdfbox"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
# UP012: prefer explicit encoding="utf-8" / "utf-8" on encode/decode/open
# for readability and defensiveness, even though Python 3 hard-codes UTF-8
# as the str.encode default. Project preference.
ignore = ["UP012"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
